--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: c++
 sudo: required
 
+before_install:
+    - "export DISPLAY=:99.0"
+    - "sh -e /etc/init.d/xvfb start"
+    - sleep 3
+
 install: ./install-dependencies.sh
 
 script:
